# radio-scan-demo

./: .gitignore  CONSTANTS.md  README.md  mypy.ini  pyproject.toml  start-tunnels.py
frontend/: constants.json  package.json
frontend/src/app/: map.tsx  page.tsx
frontend/src/app/api/get-config/: route.ts
frontend/src/app/api/rssi-ref/: route.ts
frontend/src/app/api/scan-params/: route.ts
frontend/src/app/api/toggle-streaming/: route.ts
frontend/src/app/api/websocket/: route.ts
frontend/src/components/: ConnectionStatus.tsx  ControlPanel.tsx  DistanceMap.tsx  LiveMeasurements.tsx  SpectrumDataInfo.tsx  SpectrumPlot.tsx
frontend/src/lib/: api.ts  constants.ts  websocket.ts
frontend/src/types/: spectrum.ts
src/: main.py  main_demo.py
src/utils/: constants.py  device.py  pluto.py  spectrum.py  spectrum_demo.py
tests/: scan-freq.py  scan_freq.py  scan_samples.py  stitch.py  test_cupy.py
